# contexFramacIPythonXeus

./: .fcrConfig  .gitignore  LICENSE-QuantStack  README.md  Readme.md  meson.build  meson_options.txt
.fcrConfig/: default  wp
.frama-c/: frama_c_journal.ml
include/xeus-calc/: calc.h  old_calc.hpp  token.h  xeus_calc_interpreter.hpp
libxcalc/: FramaCReadme.md  calc.c  framaCHeapFixes.h  meson.build  token.c
notebooks/: Xeus-calc.ipynb
share/jupyter/kernels/xcalc/: meson.build
src/: FramaCReadme.md  calc.c  meson.build  old_calc.cpp  token.c  xeus_calc_interpreter.cpp
tests/: fcTest.c  main.c  meson.build  test_token.c
xcalc/: xeus_calc_interpreter.cpp
xeus/: meson.build
